--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-astro": "^0.26.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
+    "pnpm": "^8.4.0",
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.5",
     "react": "^18.2.0",
